Spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
 
 p {
   font-size: 12px;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 22px;
   font-weight: 300;
   margin-bottom: 8px; }
@@ -21,26 +21,26 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 
 h1, .h1 {
   font-size: 24px;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   line-height: 35px;
   margin-bottom: 20px;
   margin-top: 62px; }
   @media (max-width: 767px) {
     h1, .h1 {
       font-size: 21px;
-      font-size: 1.8rem;
+      font-size: 1.5rem;
       line-height: 27px; } }
 
 h2, .h2 {
   font-size: 22px;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   line-height: 18px;
   margin-bottom: 24px;
   margin-top: 34px; }
   @media (max-width: 767px) {
     h2, .h2 {
       font-size: 21px;
-      font-size: 1.8rem;
+      font-size: 1.4rem;
       line-height: 26px; } }
 
 h3, .h3 {
@@ -67,6 +67,7 @@ h3, .h3 {
 }
 
 .about-container{
+  margin-bottom:2em;
   padding-top:0em;
    animation: fadeIn 0.6s ease-in both;
   -webkit-animation: fadeIn 0.6s ease-in both;
@@ -74,6 +75,7 @@ h3, .h3 {
     animation-delay: 2.2s;
 }
 .skills-container{
+  margin-bottom:2em;
   padding-top:0em;
    animation: fadeIn 0.6s ease-in both;
   -webkit-animation: fadeIn 0.6s ease-in both;
@@ -1342,14 +1344,15 @@ input:-webkit-autofill:active {
   font-weight: 500;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  padding: 15px 60px;
+  padding: 20px 70px;
   transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
   box-shadow: 0px 13px 21px -6px rgba(0, 180, 158, 0); }
   .btn.btn-primary {
     outline: none !important;
     border: none;
     z-index:3000 !important;
-    border-radius: 3px; }
+    /*border-radius: 3px; */
+  }
   .btn.btn-default {
     font-size: 8px;
     font-size: 0.8rem;
@@ -1436,8 +1439,8 @@ input:-webkit-autofill:active {
         line-height: 287px; } }
     @media (max-width: 767px) {
       .title-box .title {
-        font-size: 147px;
-        line-height: 177px; } }
+        font-size: 187px;
+        line-height: 187px; } }
   .title-box canvas {
     position: relative; }
 
